examples/shop/frontend/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio.io/rev: asm-managed
