examples/shop/frontend/app-repo/k8s/base/se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: currency
  namespace: frontend
spec:
  hosts:
  - currency.currency.svc.cluster.local
  ports:
  - name: currency
    number: 7000
    protocol: GRPC
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: productcatalog
  namespace: frontend
spec:
  hosts:
  - productcatalog.productcatalog.svc.cluster.local
  ports:
  - name: productcatalog
    number: 3550
    protocol: GRPC
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: cart
  namespace: frontend
spec:
  hosts:
  - cart.cart.svc.cluster.local
  ports:
  - name: cart
    number: 7070
    protocol: GRPC
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: recommendations
  namespace: frontend
spec:
  hosts:
  - recommendations.recommendations.svc.cluster.local
  ports:
  - name: recommendations
    number: 8080
    protocol: GRPC
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: shipping
  namespace: frontend
spec:
  hosts:
  - shipping.shipping.svc.cluster.local
  ports:
  - name: shipping
    number: 50051
    protocol: GRPC
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: checkout
  namespace: frontend
spec:
  hosts:
  - checkout.checkout.svc.cluster.local
  ports:
  - name: checkout
    number: 5050
    protocol: GRPC
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: ad
  namespace: frontend
spec:
  hosts:
  - ad.ad.svc.cluster.local
  ports:
  - name: ad
    number: 9555
    protocol: GRPC
  resolution: DNS
